--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header>
+  <!--<header>
     <nav>
       <a class="nav-link" href="#about-me">About me</a>
       <a class="nav-link" href="#timeline">Timeline</a>
@@ -30,9 +30,76 @@
     </nav>
     <span class="scroll-hint">Scroll <i class="fas fa-angle-down scroll-arrow"></i></span>
     <div class="header-overlay"></div>
-  </header>
+  </header>-->
 
-  <section id="about-me">
+  <div class="background">
+    <nav>
+      <a>Page 1</a>
+      <a>Page 2</a>
+      <a>Page 3</a>
+    </nav>
+    <div class="card">
+      <div class="introduction-container">
+        <span class="title">Hi there 👋, I'm</span>
+        <div>
+          <h1 class="name">lukas.</h1>
+          <span class="title red">AKA Meridian</span>
+        </div>
+        <div>
+          <span class="title red">Developer • Software-Engineer</span>
+          <p class="name-description">I'm a hobby developer based in southern Germany. I enjoy working on new challenges and improving my skills regarding everything IT. Currently, I'm studying a branch of Computer Science focused on telecommunications.</p>
+        </div>
+        <div class="links">
+          <a href="https://github.com/MeridianGH" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/luux.r/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/meridian_0" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+      <div>
+        <div class="scroll-container" data-speed="fast">
+          <div class="scroller">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg"  alt="JavaScript Logo" title="JavaScript">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg"  alt="HTML Logo" title="HTML">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg"  alt="CSS Logo" title="CSS">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain.svg"  alt="Node.js Logo" title="Node.js">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"  alt="express Logo" title="express">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg"  alt="Bootstrap Logo" title="Bootstrap">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg"  alt="React Logo" title="React">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg"  alt="Python Logo" title="Python">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"  alt="Java Logo" title="Java">
+          </div>
+        </div>
+        <div class="scroll-container" data-direction="left">
+          <div class="scroller">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg"  alt="Git Logo" title="Git">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg"  alt="GitHub Logo" title="GitHub">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/subversion/subversion-original.svg"  alt="Subversion Logo" title="Subversion">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-original-wordmark.svg"  alt="Heroku Logo" title="Heroku">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/markdown/markdown-original.svg"  alt="Markdown Logo" title="Markdown">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-plain-wordmark.svg"  alt="PostgreSQL Logo" title="PostgreSQL">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg"  alt="npm Logo" title="npm">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/latex/latex-original.svg"  alt="LaTeX Logo" title="LaTeX">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/eslint/eslint-original-wordmark.svg"  alt="ESLint Logo" title="ESLint">
+          </div>
+        </div>
+        <div class="scroll-container" data-speed="slow">
+          <div class="scroller">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jetbrains/jetbrains-original.svg"  alt="JetBrains Logo" title="JetBrains Suite">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/wordpress/wordpress-original.svg"  alt="Wordpress Logo" title="Wordpress">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/blender/blender-original.svg"  alt="Blender Logo" title="Blender">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-plain.svg"  alt="Adobe Photoshop Logo" title="Adobe Photoshop">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/aftereffects/aftereffects-plain.svg"  alt="Adobe After Effects Logo" title="Adobe After Effects">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/premierepro/premierepro-plain.svg"  alt="Adobe Premiere Pro Logo" title="Adobe Premiere Pro">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg"  alt="Linux Logo" title="Linux">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/raspberrypi/raspberrypi-original.svg"  alt="Raspberry Pi Logo" title="Raspberry Pi">
+            <img class="skills-logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/filezilla/filezilla-plain.svg" alt="FileZilla Logo" title="FileZilla">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--<section id="about-me">
     <div class="about-me-container">
       <div class="introduction-container">
         <span class="title">Hi there 👋, I'm</span>
@@ -65,12 +132,6 @@
   <div class="divider"></div>
   <section id="timeline">
     <span class="title">Timeline:</span>
-<!--    <div class="timeline">
-      <div class="fadeIn"><p class="timeline-card">2012 - 2020<br><br>Abitur Kolleg St. Blasien<br>(High-School Diploma)</p></div>
-      <div class="fadeIn"><p class="timeline-card">10/2020 - 02/2022<br><br>3 Semesters Computer Science (B.Sc.)<br>University of Konstanz</p></div>
-      <div class="fadeIn"><p class="timeline-card">01/2022<br><br>Ski Instructor training<br>Tiroler Skilehrerverband</p></div>
-      <div class="fadeIn"><p class="timeline-card">10/2022<br><br>Dual Study<br>Information and Communication Technology<br>Deutsche Telekom Stuttgart - HTWK Leipzig</p></div>
-    </div>-->
     <div class="timeline-new">
       <div class="timeline-events">
         <div class="timeline-event" style="flex-grow: 1">
@@ -190,7 +251,7 @@
     <div class="fadeIn">
       <span>And of course: This portfolio website.</span>
     </div>
-  </section>
+  </section>-->
   <footer class="footer">
     © 2022 Copyright<br>
     Lukas Romacker | Meridian
